--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
   align-items: center;
   flex-direction: column;
   font-family: "Nunito", sans-serif;
+  background-image: url(../public/istockphoto-1016124648-612x612.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
 }
 body {
